[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Nate Oaks <nate.oaks@gmail.com>"]
readme = "README.md"
packages = [{include = "python_api"}]

[tool.poetry.dependencies]
python = "^3.11.0rc2"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
