[tool.poetry]
name = "python-api"
version = "0.1.0"
description = ""
authors = ["Nate Oaks <nate.oaks@gmail.com>"]
readme = "README.md"
packages = [{include = "python_api"}]

[tool.poetry.dependencies]
python = "^3.11.0"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
pylint = "^2.15.4"
mypy = "^0.991"
isort = "^5.10.1"
bandit = "^1.7.4"
wrapt = "^1.14.1"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-docstring"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
